GreenNao/greennao/log/build_2025-04-10_14-39-57/greennao/stderr.log
  File "/home/evichan/Desktop/2024-tfg-eva-fernandez/GreenNao/greennao/install/greennao/lib/python3.10/site-packages/greennao/GreenNaoLib.py", line 248
    elif self.V < 0:
    ^^^^
SyntaxError: invalid syntax

